Correcteed getNewSlotType method